legacy/cli/src/commands/init/snapshots/moon_cli__commands__init__tests__renders_glob_list.snap
---
source: crates/cli/src/commands/init/mod.rs
expression: render_workspace_template(&context).unwrap()
---
# https://moonrepo.dev/docs/config/workspace
$schema: 'https://moonrepo.dev/schemas/workspace.json'

# Require a specific version of moon while running commands, otherwise fail.
# versionConstraint: '>=1.0.0'

# Extend and inherit an external configuration file. Must be a valid HTTPS URL or file system path.
# extends: './shared/workspace.yml'

# REQUIRED: A map of all projects found within the workspace, or a list or file system globs.
# When using a map, each entry requires a unique project ID as the map key, and a file system
# path to the project folder as the map value. File paths are relative from the workspace root,
# and cannot reference projects located outside the workspace boundary.
projects:
  - 'apps/*'
  - 'packages/*'



